# quantum-neuromorph-hub

./: .gitignore  EcoCorridorContext.kt  EvolutionAuditRecord.kt  MORPHEUS_STATIC_ENDPOINT.md  README.md  bio-corridor-implant-interface-v1.aln  eco_corridor_context.v1.json  hyper-transparency-portal.js  neurocyber.safety.cybervision-nanoswarm.aln
.github/workflows/: ci.yml  release.yml
aln/: reversal_policy.aln
app/src/main/java/com/example/snc/: SncNative.kt
crates/android-ffi/src/: api.rs  lib.rs
crates/bci-safety-core/src/: lib.rs
crates/ceim-kernel/src/: lib.rs  regulatory.rs
crates/cli-agent/: Cargo.toml
crates/cli-agent/src/: main.rs
crates/core-contract/: Cargo.toml
crates/core-contract/src/: lib.rs  route.rs  router_guard.rs
crates/cpvm-kernel/: Cargo.toml
crates/cpvm-kernel/src/: lib.rs
crates/cybo-intake-scheduler/src/: series.rs
crates/econet-dashboard/: Cargo.toml
crates/econet-dashboard/src/: api.rs
crates/governance-core/: Cargo.toml
crates/governance-core/src/: audit.rs  decision.rs  lib.rs  roles.rs
crates/guards/src/: bio_control_origin_guard.rs
crates/implant-interface-guardsrc/: telemetry.rs
crates/morpheus-cli/src/: main.rs
crates/morpheus-client/: Cargo.toml
crates/morpheus-client/src/: lib.rs
crates/morpheus-client/src/bostrom/: did_integration.rs
crates/morpheus-client/src/types/: audit.rs  corridor.rs  guards.rs
crates/morpheus-compliance/src/: lib.rs
crates/morpheus-config/src/: lib.rs
crates/morpheus-googolswarm/morpheus-core/src/: capabilities.rs  error.rs  ledger.rs  lib.rs  rights.rs
crates/morpheus-googolswarm/morpheus-examples/: Cargo.toml
crates/morpheus-googolswarm/morpheus-examples/src/: main.rs
crates/morpheus-googolswarm/morpheus-orchestrator/: Cargo.toml
crates/morpheus-googolswarm/morpheus-orchestrator/src/: interpreter.rs  main.rs
crates/morpheus-googolswarm/morpheus-spec-aln/: Cargo.toml
crates/morpheus-googolswarm/morpheus-spec-aln/src/: lib.rs  model.rs
crates/morpheus-neuromorph/: Cargo.toml
crates/morpheus-neuromorph-core/: Cargo.toml
crates/morpheus-security/src/: lib.rs
crates/neuromorph-sim/: Cargo.toml
crates/neuromorph-sim/src/: envelope.rs  lib.rs  mitigation.rs  projector.rs
crates/nitrate-mar-planner/: Cargo.toml
crates/nitrate-mar-planner/src/: main.rs  model.rs
crates/orchestration/src/: lib.rs
crates/pfas-selector/: Cargo.toml
crates/pfas-selector/src/: main.rs  supreme.rs
crates/phoenix-bridge/: Cargo.toml
crates/phoenix-bridge/src/: config.rs  state.rs
js/: snc-eco-corridor-client.js
manifests/: decoder.bandpower.scognitive.v1.json  decoder.erp.p300-consent.v1.json  decoder.ssvep.cca-select.v1.json  neuro-eco-identity.bostrom18.local.json
morpheus-googolswarm/: Cargo.toml
morpheus-neuromorph/: Cargo.toml
morpheus-neuromorph/crates/acs-account/: Cargo.toml
qpudatashards/corridors/: tribal.gric-epa-2024.aln
schemas/: decoder-module.schema.json  evolution-audit-record.schema.json  neuro-eco-identity.schema.json  neurorights-policy.schema.json
snc-eco-corridor/src/: lib.rs
specs/: hybrid-enforcement-blueprint-v1.md  interstitial-rights-v1.md  signature-threat-model-v1.md
src/main/java/org/neuromorph/sovereignty/: SovereignNeuromorphContract.java
