[package]
name = "cli-agent"
version = "0.1.0"
edition = "2021"
description = "CLI interface for neuromorphic sovereign workflows."
license = "MIT"
repository = "https://github.com/your-user/morpheus-neuromorph"

[dependencies]
core-contract = { path = "../core-contract" }
orchestration = { path = "../orchestration" }
