[package]
name = "morpheus-neuromorph-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
morpheus-config = { path = "../morpheus-config" }
morpheus-compliance = { path = "../morpheus-compliance" }
morpheus-security = { path = "../morpheus-security" }
morpheus-registry = { path = "../morpheus-registry" }
