[package]
name = "phoenix-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ceim-kernel = { path = "../ceim-kernel" }
cpvm-kernel = { path = "../cpvm-kernel" }
